## Process this file with automake to produce Makefile.in

## Created by Anjuta
SUBDIRS = XSDTemplates Configuration
CLEANFILES = *~ *.pc ${BUILT_SOURCES}

BUILT_SOURCES = \
	configuration-list

XSDDIR = $(top_srcdir)/src/XSDTemplates

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-DPROGRAMNAME_LOCALEDIR=\"${PROGRAMNAME_LOCALEDIR}\" \
	$(modules_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g \
	 -Werror

lib_LTLIBRARIES = libsaesguibase.la

libsaesguibase_la_SOURCES = \
	${BUILT_SOURCES} \
	Gui/Windows/menu-window.h \
	Gui/Windows/menu-window.cc \
	Functionalities/close-election-functionality.cc \
	Functionalities/close-election-functionality.h \
	Functionalities/close-votation-functionality.cc \
	Functionalities/close-votation-functionality.h \
	Functionalities/vote-consolidation-functionality.cc \
	Functionalities/vote-consolidation-functionality.h \
	Functionalities/diagnosis-functionality.cc \
	Functionalities/diagnosis-functionality.h \
	Functionalities/open-election-functionality.cc \
	Functionalities/open-election-functionality.h \
	Functionalities/graphic-display-functionality.h \
	Functionalities/graphic-display-functionality.hpp \
	Functionalities/change-hour-functionality.cc \
	Functionalities/change-hour-functionality.h \
	Functionalities/card-generator-functionality.h \
	Functionalities/card-generator-functionality.cc \
	Functionalities/recovery-card-generator-functionality.h \
	Functionalities/recovery-card-generator-functionality.cc \
	Functionalities/assisted-card-generator-functionality.h \
	Functionalities/assisted-card-generator-functionality.cc \
	Functionalities/register-president-notes-functionality.h \
	Functionalities/register-president-notes-functionality.cc \
	Functionalities/DataUtilsValidatorFunctionality.hxx \
	Functionalities/DataUtilsValidatorFunctionality.cxx \
	Operation/authenticator-user-rol.h \
	Operation/authenticator-user-rol.cc \
	Configuration/GeneratedClasses/Configuration/SaesGUIConfiguration-schema.cxx \
	Configuration/s-a-e-s-g-u-i-conf-manager.cc \
	Configuration/s-a-e-s-g-u-i-conf-manager.h \
	Configuration/saes-gui-language-controller.cc \
	Configuration/saes-gui-language-controller.h \
	Gui/Windows/empty-window.h \
	Gui/Windows/empty-window.cc \
	Functionalities/printer-diagnosis-functionality.h \
	Functionalities/printer-diagnosis-functionality.cc \
	Functionalities/s-c-reader-diagnosis-functionality.h \
	Functionalities/s-c-reader-diagnosis-functionality.cc \
	Functionalities/alarm-box-diagnosis-functionality.h \
	Functionalities/alarm-box-diagnosis-functionality.cc \
	Operation/functionality-initiator.h \
	Operation/functionality-initiator.cc \
	Gui/Widgets/ballot-option-selection-widget.h \
	Gui/Widgets/ballot-option-selection-widget.cc \
	Gui/Widgets/ballot-option-widget.h \
	Gui/Widgets/ballot-option-widget.cc \
	Gui/Widgets/referendum-widget.h \
	Gui/Widgets/referendum-widget.cc \
	Gui/Widgets/referendum-selection-widget.h \
	Gui/Widgets/referendum-selection-widget.cc \
	Gui/Widgets/party-selection-widget.h \
	Gui/Widgets/party-selection-widget.cc \
	Gui/Widgets/party-widget.h \
	Gui/Widgets/party-widget.cc \
	Gui/Windows/choose-option-window.h \
	Gui/Windows/choose-option-window.cc \
	Gui/Widgets/duration-verification-widget.h \
	Gui/Widgets/duration-verification-widget.cc \
	$(top_srcdir)/src/Operation/FormatLabel.hxx \
	$(top_srcdir)/src/Operation/FormatLabel.cxx \
	$(top_srcdir)/src/Operation/ValidateWidget.hxx \
	$(top_srcdir)/src/Operation/ValidateWidget.cxx \
	$(top_srcdir)/src/Operation/AlarmMessage.hxx \
	$(top_srcdir)/src/Operation/AlarmMessage.cxx \
	$(top_srcdir)/src/Operation/Voting/VotingOperation.hxx \
	$(top_srcdir)/src/Operation/Voting/VotingOperation.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/WaitingForCardWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/WaitingForCardWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/ScreenVotingWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/ScreenVotingWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/BallotOptionButtonWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/BallotOptionButtonWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/AuthenticationWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/AuthenticationWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PMAuthenticationWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PMAuthenticationWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMAuthenticationWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMAuthenticationWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/MachineVotingWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/MachineVotingWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/MachineWizardWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/MachineWizardWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PartyButtonWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PartyButtonWidget.cxx \
	Functionalities/calibration-diagnosis-functionality.h \
	Functionalities/calibration-diagnosis-functionality.cc \
	Functionalities/brightness-diagnosis-functionality.h \
	Functionalities/brightness-diagnosis-functionality.cc \
	Functionalities/barcode-diagnosis-functionality.h \
	Functionalities/barcode-diagnosis-functionality.cc \
	Functionalities/all-diagnosis-functionality.h \
	Functionalities/all-diagnosis-functionality.cc \
	Functionalities/flash-diagnosis-functionality.h \
	Functionalities/flash-diagnosis-functionality.cc \
	Functionalities/voting-experience-validation-functionality.h \
	Functionalities/voting-experience-validation-functionality.cpp \
	Gui/Widgets/voting-widget-base.h \
	Gui/Widgets/voting-widget-base.cc \
	Gui/Widgets/basic-diagnostic-widget.h \
	Gui/Widgets/basic-diagnostic-widget.cc \
	Gui/Widgets/smart-card-reader-diagnosis-widget.h \
	Gui/Widgets/smart-card-reader-diagnosis-widget.cc \
	Gui/Widgets/printer-diagnosis-widget.h \
	Gui/Widgets/printer-diagnosis-widget.cc \
	Gui/Widgets/alarm-box-diagnosis-widget.h \
	Gui/Widgets/alarm-box-diagnosis-widget.cc \
	Gui/Widgets/bar-code-diagnosis-widget.h \
	Gui/Widgets/bar-code-diagnosis-widget.cc \
	Gui/Widgets/calibration-diagnosis-widget.h \
	Gui/Widgets/calibration-diagnosis-widget.cc \
	Gui/Widgets/select-language-widget.h \
	Gui/Widgets/select-language-widget.cc \
	Gui/Widgets/id-card-widget.h \
	Gui/Widgets/id-card-widget.cc \
	Gui/Widgets/id-card-widget-close-election.h \
	Gui/Widgets/id-card-widget-close-election.cc \
	Gui/Widgets/id-card-widget-open-election.h \
	Gui/Widgets/id-card-widget-open-election.cc \
	Gui/Widgets/id-card-widget-pm-install.h \
	Gui/Widgets/id-card-widget-pm-install.cc \
	Gui/Widgets/IDCardWidgetVMInstall.hxx \
	Gui/Widgets/IDCardWidgetVMInstall.cxx \
	Gui/Widgets/IDCardWidgetCloseVotation.hxx \
	Gui/Widgets/IDCardWidgetCloseVotation.cxx \
	Gui/Widgets/Voting/PBReports/poll-worker-id-card-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-id-card-widget.cc \
	Gui/Widgets/brightness-diagnosis-widget.h \
	Gui/Widgets/brightness-diagnosis-widget.cc \
	Gui/Widgets/flash-diagnosis-widget.h \
	Gui/Widgets/flash-diagnosis-widget.cc \
	Gui/Widgets/combo-box-choose-widget.h \
	Gui/Widgets/combo-box-choose-widget.cc \
	Gui/Widgets/radio-button-choose-widget.h \
	Gui/Widgets/radio-button-choose-widget.cc \
	Gui/Widgets/activator-card-counter-widget.h \
	Gui/Widgets/activator-card-counter-widget.cc \
	Gui/Widgets/custom-attributes-combo-selections-widget.h \
	Gui/Widgets/custom-attributes-combo-selections-widget.cc \
	Gui/Widgets/custom-attributes-counter-widget.h \
	Gui/Widgets/custom-attributes-counter-widget.cc \
	Gui/Widgets/event-box-choose-widget.h \
	Gui/Widgets/event-box-choose-widget.cc \
	Gui/Windows/language-selection-window.h \
	Gui/Windows/language-selection-window.cc \
	Functionalities/change-language-functionality.h \
	Functionalities/change-language-functionality.cc \
	Gui/Widgets/change-language-widget.h \
	Gui/Widgets/change-language-widget.cc \
	Configuration/saes-gui-image-resources-manager.h \
	Configuration/saes-gui-image-resources-manager.cc \
	Gui/Widgets/voting-machine-installation-wizard-widget.h \
	Gui/Widgets/voting-machine-installation-wizard-widget.cc \
	Gui/Windows/voting-machine-installation-wizard-window.h \
	Gui/Windows/voting-machine-installation-wizard-window.cc \
	Functionalities/voting-machine-installation-functionality.h \
	Functionalities/voting-machine-installation-functionality.cc \
	Gui/Widgets/complex-ballot-option-widget.h \
	Gui/Widgets/complex-ballot-option-widget.cc \
	Functionalities/vote-demo-functionality.cc \
	Functionalities/vote-demo-functionality.h \
	Operation/Voting/VotingWidgetManager.cxx \
	Operation/Voting/VotingWidgetManager.hxx \
	Gui/Widgets/Voting/language-selection-widget.h \
	Gui/Widgets/Voting/language-selection-widget.cc \
	Gui/Widgets/Voting/selection-widget-base.h \
	Gui/Widgets/Voting/selection-widget-base.cc \
	Gui/Widgets/Voting/question-selection-widget.h \
	Gui/Widgets/Voting/question-selection-widget.cc  \
	Gui/Widgets/Voting/welcome-message-widget.h \
	Gui/Widgets/Voting/welcome-message-widget.cc \
	Gui/Widgets/Voting/custom-attribute-widget.h \
	Gui/Widgets/Voting/custom-attribute-widget.cc \
	$(top_srcdir)/src/Gui/Widgets/Voting/SimulationWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/SimulationWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PreviewWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PreviewWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/TimeOutPreviewWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/TimeOutPreviewWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotingExperienceValidationWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotingExperienceValidationWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotingExperienceWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotingExperienceWidget.cxx \
	Gui/Widgets/Voting/super-null-selection-widget.h \
	Gui/Widgets/Voting/super-null-selection-widget.cc  \
	Gui/Widgets/Voting/contest-null-selection-widget.h \
	Gui/Widgets/Voting/contest-null-selection-widget.cc \
	Functionalities/print-preview-functionality.cc \
	Functionalities/print-preview-functionality.h \
	Functionalities/incident-report-functionality.cc \
	Functionalities/incident-report-functionality.h \
	Functionalities/statistics-report-functionality.cc \
	Functionalities/statistics-report-functionality.h \
	Functionalities/poll-worker-register-functionality.cc \
	Functionalities/poll-worker-register-functionality.h \
	Functionalities/LogReportFunctionality.cc \
	Functionalities/LogReportFunctionality.h \
	Functionalities/ReportPrintingFunctionality.cpp \
	Functionalities/ReportPrintingFunctionality.h \
	Functionalities/VotingForDisabledFunctionality.cxx \
	Functionalities/VotingForDisabledFunctionality.hxx \
	Functionalities/PoliceNotesFunctionality.cxx \
	Functionalities/PoliceNotesFunctionality.hxx \
	Gui/Widgets/assisted-activation-add-widget.h \
	Gui/Widgets/assisted-activation-add-widget.cc \
	Gui/Widgets/assisted-activation-view-widget.h \
	Gui/Widgets/assisted-activation-view-widget.cc \
	Gui/Widgets/Voting/PBReports/poll-worker-note-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-note-widget.cc \
	Gui/Widgets/Voting/PBReports/VotingForDisabledWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledWidget.cxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledQuestionWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledQuestionWidget.cxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterWidget.cxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteWidget.cxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterWidget.cxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/incident-report-widget.h \
	Gui/Widgets/Voting/PBReports/incident-report-widget.cc \
	Gui/Widgets/Voting/PBReports/incident-report-dialog-widget.h \
	Gui/Widgets/Voting/PBReports/incident-report-dialog-widget.cc \
	Gui/Widgets/Voting/PBReports/incident-report-tree-view.h \
	Gui/Widgets/Voting/PBReports/incident-report-tree-view.cc \
	Gui/Widgets/Voting/PBReports/statistic-counter-widget.h \
	Gui/Widgets/Voting/PBReports/statistic-counter-widget.cc \
	Gui/Widgets/recovery-card-generator-widget.h \
	Gui/Widgets/recovery-card-generator-widget.cc \
	Gui/Windows/initial-calib-window.h \
	Gui/Windows/initial-calib-window.cc \
	Gui/Widgets/Voting/InterruptVotingWidget.hxx \
	Gui/Widgets/Voting/InterruptVotingWidget.cxx \
	Gui/Widgets/Voting/InterruptWidget.hxx \
	Gui/Widgets/Voting/InterruptWidget.cxx \
	Gui/Widgets/Voting/KeypadVotingPasswordWidget.hxx \
	Gui/Widgets/Voting/KeypadVotingPasswordWidget.cxx \
	Gui/Widgets/party-contest-widget.cc \
	Gui/Widgets/party-contest-widget.h \
	Gui/Widgets/party-contest-viewer-widget.h \
	Gui/Widgets/party-contest-viewer-widget.cc \
	Gui/Widgets/persist-transmission-package-widget.h \
	Gui/Widgets/persist-transmission-package-widget.cc \
	Gui/Widgets/PersistCodiFilesWidget.cxx \
	Gui/Widgets/PersistCodiFilesWidget.hxx \
	Gui/Widgets/PersistAllResultWidget.cxx \
	Gui/Widgets/PersistAllResultWidget.hxx \
	Gui/Widgets/close-election-status-widget.h \
	Gui/Widgets/close-election-status-widget.cc \
	Gui/Widgets/OpenElectionStatusWidget.hxx \
	Gui/Widgets/OpenElectionStatusWidget.cxx \
	Gui/Widgets/OpenNoteWidget.hxx \
	Gui/Widgets/OpenNoteWidget.cxx \
	Gui/Widgets/sign-transmission-package-widget.h \
	Gui/Widgets/sign-transmission-package-widget.cc \
	Gui/Widgets/sign-election-resource-widget.h \
	Gui/Widgets/sign-election-resource-widget.cc \
	Gui/Widgets/report-printing-close-widget.h \
	Gui/Widgets/report-printing-close-widget.cc \
	Gui/Widgets/ReportPrintingWidget.h \
	Gui/Widgets/ReportPrintingWidget.cpp \
	Gui/Widgets/ReportLogWidget.h \
	Gui/Widgets/ReportLogWidget.cc \
	Gui/Widgets/LogTreeViewWidget.h \
	Gui/Widgets/LogTreeViewWidget.cc \
	Gui/Widgets/LogPagingTreeViewWidget.h \
	Gui/Widgets/LogPagingTreeViewWidget.cc \
	Gui/Widgets/party-contest-zoom-widget.cc \
	Gui/Widgets/Voting/vote-statistics-widget.h \
	Gui/Widgets/Voting/vote-statistics-widget.cc \
	Gui/Widgets/BeidWidget.h \
	Gui/Widgets/BeidWidget.cpp \
	Gui/Widgets/BeidErrorWidget.hxx \
	Gui/Widgets/BeidErrorWidget.cxx \
	Functionalities/Providers/PresidentPassPhraseAuthenticationProvider.h \
	Functionalities/Providers/PresidentPassPhraseAuthenticationProvider.cpp \
	Functionalities/Providers/RoleAuthenticationProvider.cpp \
	Functionalities/Providers/RoleAuthenticationProvider.h \
	Gui/Widgets/generate-pv-report-widget.h \
	Gui/Widgets/generate-pv-report-widget.cc \
	Gui/Widgets/print-pv-report-widget.h \
	Gui/Widgets/print-pv-report-widget.cc \
	Gui/Widgets/assisted-activation-id-card-widget.cc \
	Gui/Widgets/assisted-activation-id-card-widget.h \
	Gui/Widgets/assisted-activation-id-card-widget-view.cc \
	Gui/Widgets/assisted-activation-id-card-widget-view.h \
	Gui/Widgets/assisted-activation-id-card-widget-viewer.cc \
	Gui/Widgets/assisted-activation-id-card-widget-viewer.h \
	Gui/Widgets/assisted-activation-impugnation-widget.cc \
	Gui/Widgets/assisted-activation-impugnation-widget.h \
	Gui/Widgets/assisted-activation-manager-widget.cc \
	Gui/Widgets/assisted-activation-manager-widget.h \
	Gui/Widgets/assisted-activation-question-widget.cc \
	Gui/Widgets/assisted-activation-question-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-member-register-widget.cc \
	Gui/Widgets/Voting/PBReports/poll-worker-member-register-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-member-widget.cc \
	Gui/Widgets/Voting/PBReports/poll-worker-member-widget.h \
	Gui/Widgets/Voting/PBReports/note-statistics-widget.cc \
	Gui/Widgets/Voting/PBReports/note-statistics-widget.h \
	Gui/Widgets/Voting/PBReports/CloseNoteWidget.cxx \
	Gui/Widgets/Voting/PBReports/CloseNoteWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/CloseNoteInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterWidget.cxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterInfoWidget.cxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/statistic-counter-register-widget.cc \
	Gui/Widgets/Voting/PBReports/statistic-counter-register-widget.h \
	Gui/Widgets/confirmation-delete-widget.cc \
	Gui/Widgets/confirmation-delete-widget.h \
	Gui/Widgets/voting-frame-base.cc \
	Gui/Widgets/voting-frame-base.h \
	Functionalities/ShutdownMachineFunctionality.h \
	Functionalities/ShutdownMachineFunctionality.cpp \
	Gui/Widgets/close-election-confirmation-widget.h \
	Gui/Widgets/close-election-confirmation-widget.cc \
	Operation/GenerateXMLImage.h \
	Operation/GenerateXMLImage.cpp \
	Gui/Widgets/BarcodeDetectionWidget.h \
	Gui/Widgets/BarcodeDetectionWidget.cpp \
	Functionalities/FillAssistedActivationInfoFunctionality.h \
	Functionalities/FillAssistedActivationInfoFunctionality.cpp \
	Gui/Widgets/AssistedActivationWidget.h \
	Gui/Widgets/AssistedActivationWidget.cpp \
	Functionalities/ActivationConsolidationFunctionality.h \
	Functionalities/ActivationConsolidationFunctionality.cpp \
	Gui/Widgets/ConsolidationStatsWidget.h \
	Gui/Widgets/ConsolidationStatsWidget.cpp \
	Gui/Widgets/ActivationStatsWidget.h \
	Gui/Widgets/ActivationStatsWidget.cpp \
	Gui/Widgets/CardActivatorEventBox.h \
	Gui/Widgets/CardActivatorEventBox.cpp \
	Gui/Widgets/ContingencyCardGenWidget.h \
	Gui/Widgets/ContingencyCardGenWidget.cpp \
	$(top_srcdir)/src/Gui/Windows/PMWindow.hxx \
	$(top_srcdir)/src/Gui/Windows/PMWindow.cxx \
	$(top_srcdir)/src/Gui/Windows/VMWindow.hxx \
	$(top_srcdir)/src/Gui/Windows/VMWindow.cxx \
	$(top_srcdir)/src/Gui/Widgets/AbstractFactoryWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/AbstractFactoryWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/FactoryMethodWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/FactoryMethodWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/FactoryVotingWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/FactoryVotingWidget.hxx \
	$(top_srcdir)/src/Gui/Windows/RunMachineWindow.hxx \
	$(top_srcdir)/src/Gui/Windows/RunMachineWindow.cxx \
	$(top_srcdir)/src/Gui/Widgets/RunMachineWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/RunMachineWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PMInstallMachineWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PMInstallMachineWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMInstallMachineWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMInstallMachineWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/InstallMachineWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/InstallMachineWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotePreviewWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/VotePreviewWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/ContingencyWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/ContingencyWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/LoginWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/LoginWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/InfoMessageWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/InfoMessageWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMInstallationConfirmation.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMInstallationConfirmation.hxx \
	$(top_srcdir)/src/Gui/Widgets/PollingPlaceInfoWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PollingPlaceInfoWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PMPollingPlaceInfoWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PMPollingPlaceInfoWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMPollingPlaceInfoWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMPollingPlaceInfoWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PMAuthenticationPollingPlaceInfoWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PMAuthenticationPollingPlaceInfoWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMAuthenticationPollingPlaceInfoWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMAuthenticationPollingPlaceInfoWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/ProgressWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/ProgressWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/PMProgressWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/PMProgressWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/VMProgressWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/VMProgressWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/LanguageInstallWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/LanguageInstallWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/ReportInstallWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/ReportInstallWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/AutomaticDiagnosticWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/AutomaticDiagnosticWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/DiagnosticResultWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/DiagnosticResultWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/DeviceResultWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/DeviceResultWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/InitiatorWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/InitiatorWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/CardRemovedWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/CardRemovedWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/RemoveCardWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/RemoveCardWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintVoteWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintVoteWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/EndPrintVoteWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/EndPrintVoteWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintVoteErrorWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintVoteErrorWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintTimeOutWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/PrintTimeOutWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/EndVotingWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/Voting/EndVotingWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/BallotOptionTableWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/BallotOptionTableWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableColumnFixedWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableColumnFixedWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableColumnDynamicWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableColumnDynamicWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/FillTableWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/HelpWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/HelpWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/InfoStepWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/InfoStepWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/MenuWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/MenuWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/MemoryStateWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/MemoryStateWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/DiagnosisBlockedWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/DiagnosisBlockedWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/ResultWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/ResultWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/ListResultWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/ListResultWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/DataUtilsValidatorWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/DataUtilsValidatorWidget.hxx \
	$(top_srcdir)/src/Gui/Widgets/DataUtilsResultWidget.cxx \
	$(top_srcdir)/src/Gui/Widgets/DataUtilsResultWidget.hxx

libsaesguibase_la_LIBADD = \
	$(modules_LIBS) @INTLLIBS@

libsaesguibase_la_CPPFLAGS = \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/Configuration/GeneratedClasses \
	$(modules_CFLAGS)

libsaesguibase_la_LDFLAGS = -version-info @LIBVERSION@:@LIBFIX@:@LIBMINOR@

if ADD_RELEASE
 libsaesguibase_la_LDFLAGS += -release @LIBMAYOR@.@LIBMINOR@ 
endif

saesguiincludedir= $(includedir)/saesguibase
nobase_saesguiinclude_HEADERS = \
	Gui/Windows/voting-machine-installation-wizard-window.h \
	Gui/Windows/menu-window.h \
	Gui/Windows/initial-calib-window.h \
	Gui/Windows/empty-window.h \
	Gui/Windows/choose-option-window.h \
	Functionalities/register-president-notes-functionality.h \
	Functionalities/card-generator-functionality.h \
	Functionalities/recovery-card-generator-functionality.h \
	Functionalities/assisted-card-generator-functionality.h \
	Functionalities/close-election-functionality.h \
	Functionalities/diagnosis-functionality.h \
	Functionalities/open-election-functionality.h \
	Functionalities/graphic-display-functionality.h \
	Functionalities/graphic-display-functionality.hpp \
	Functionalities/printer-diagnosis-functionality.h \
	Functionalities/s-c-reader-diagnosis-functionality.h \
	Functionalities/alarm-box-diagnosis-functionality.h \
	Functionalities/calibration-diagnosis-functionality.h \
	Functionalities/brightness-diagnosis-functionality.h \
	Functionalities/barcode-diagnosis-functionality.h \
	Functionalities/all-diagnosis-functionality.h \
	Functionalities/flash-diagnosis-functionality.h \
	Functionalities/change-hour-functionality.h \
	Functionalities/vote-demo-functionality.h \
	Functionalities/statistics-report-functionality.h \
	Functionalities/VotingForDisabledFunctionality.hxx \
	Functionalities/PoliceNotesFunctionality.hxx \
	Functionalities/DataUtilsValidatorFunctionality.hxx \
	Operation/authenticator-user-rol.h \
	Operation/functionality-initiator.h \
	Configuration/saes-gui-language-controller.h \
	Configuration/s-a-e-s-g-u-i-conf-manager.h \
	Configuration/saes-gui-image-resources-manager.h \
	Gui/Widgets/Voting/KeypadVotingPasswordWidget.hxx \
	Gui/Widgets/Voting/InterruptVotingWidget.hxx \
	Gui/Widgets/Voting/InterruptWidget.hxx \
	Gui/Widgets/Voting/ScreenVotingWidget.hxx \
	Gui/Widgets/recovery-card-generator-widget.h \
	Gui/Widgets/assisted-activation-add-widget.h \
	Gui/Widgets/assisted-activation-view-widget.h \
	Gui/Widgets/combo-box-choose-widget.h \
	Gui/Widgets/radio-button-choose-widget.h \
	Gui/Widgets/activator-card-counter-widget.h \
	Gui/Widgets/id-card-widget.h \
	Gui/Widgets/id-card-widget-close-election.h \
	Gui/Widgets/id-card-widget-open-election.h \
	Gui/Widgets/duration-verification-widget.h \
	Gui/Widgets/id-card-widget-pm-install.h \
	Gui/Widgets/IDCardWidgetVMInstall.hxx \
	Gui/Widgets/IDCardWidgetCloseVotation.hxx \
	Gui/Widgets/Voting/PBReports/poll-worker-id-card-widget.h \
	Gui/Widgets/ballot-option-selection-widget.h \
	Gui/Widgets/ballot-option-widget.h \
	Gui/Widgets/referendum-widget.h \
	Gui/Widgets/referendum-selection-widget.h \
	Gui/Widgets/Voting/WaitingForCardWidget.hxx \
	Gui/Widgets/party-selection-widget.h \
	Gui/Widgets/party-widget.h \
	Gui/Widgets/basic-diagnostic-widget.h \
	Gui/Widgets/smart-card-reader-diagnosis-widget.h \
	Gui/Widgets/printer-diagnosis-widget.h \
	Gui/Widgets/alarm-box-diagnosis-widget.h \
	Gui/Widgets/bar-code-diagnosis-widget.h \
	Gui/Widgets/calibration-diagnosis-widget.h \
	Gui/Widgets/select-language-widget.h \
	Gui/Widgets/brightness-diagnosis-widget.h \
	Gui/Widgets/flash-diagnosis-widget.h \
	Gui/Widgets/custom-attributes-combo-selections-widget.h \
	Gui/Widgets/custom-attributes-counter-widget.h \
	Gui/Widgets/event-box-choose-widget.h \
	Gui/Widgets/voting-widget-base.h \
	Gui/Widgets/voting-machine-installation-wizard-widget.h \
	Gui/Windows/language-selection-window.h \
	Functionalities/change-language-functionality.h \
	Gui/Widgets/change-language-widget.h \
	Gui/Widgets/complex-ballot-option-widget.h \
	Functionalities/voting-machine-installation-functionality.h \
	Operation/Voting/VotingWidgetManager.hxx \
	Gui/Widgets/Voting/language-selection-widget.h \
	Gui/Widgets/Voting/selection-widget-base.h \
	Gui/Widgets/Voting/question-selection-widget.h \
	Gui/Widgets/Voting/welcome-message-widget.h \
	Gui/Widgets/Voting/custom-attribute-widget.h \
	Gui/Widgets/Voting/super-null-selection-widget.h \
	Gui/Widgets/Voting/contest-null-selection-widget.h \
	Functionalities/print-preview-functionality.h \
	Gui/Widgets/Voting/PBReports/poll-worker-note-widget.h \
	Gui/Widgets/Voting/PBReports/VotingForDisabledWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledQuestionWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/VotingForDisabledInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/PoliceNoteRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/incident-report-widget.h \
	Gui/Widgets/Voting/PBReports/incident-report-dialog-widget.h \
	Gui/Widgets/Voting/PBReports/incident-report-tree-view.h \
	Gui/Widgets/Voting/PBReports/statistic-counter-widget.h \
	Functionalities/incident-report-functionality.h \
	Functionalities/poll-worker-register-functionality.h \
	Functionalities/voting-experience-validation-functionality.h \
	Functionalities/close-votation-functionality.h \
	Functionalities/vote-consolidation-functionality.h \
	Gui/Widgets/party-contest-widget.h \
	Gui/Widgets/party-contest-zoom-widget.h \
	Gui/Widgets/ReportPrintingWidget.h \
	Gui/Widgets/ReportLogWidget.h \
	Gui/Widgets/LogTreeViewWidget.h \
	Gui/Widgets/LogPagingTreeViewWidget.h \
	Gui/Widgets/party-contest-viewer-widget.h \
	Gui/Widgets/Voting/vote-statistics-widget.h \
	Gui/Widgets/persist-transmission-package-widget.h \
	Gui/Widgets/PersistCodiFilesWidget.hxx \
	Gui/Widgets/PersistAllResultWidget.hxx \
	Gui/Widgets/report-printing-close-widget.h \
	Gui/Widgets/close-election-status-widget.h \
	Gui/Widgets/sign-transmission-package-widget.h \
	Gui/Widgets/sign-election-resource-widget.h \
	Gui/Widgets/BeidWidget.h \
	Gui/Widgets/BeidErrorWidget.hxx \
	Functionalities/Providers/RoleAuthenticationProvider.h \
	Functionalities/Providers/PresidentPassPhraseAuthenticationProvider.h \
	Gui/Widgets/generate-pv-report-widget.h \
	Gui/Widgets/print-pv-report-widget.h \
	Gui/Widgets/assisted-activation-id-card-widget.h \
	Gui/Widgets/assisted-activation-impugnation-widget.h \
	Gui/Widgets/assisted-activation-manager-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-member-register-widget.h \
	Gui/Widgets/Voting/PBReports/poll-worker-member-widget.h \
	Gui/Widgets/assisted-activation-id-card-widget-view.h \
	Gui/Widgets/assisted-activation-id-card-widget-viewer.h \
	Gui/Widgets/assisted-activation-question-widget.h \
	Gui/Widgets/Voting/PBReports/note-statistics-widget.h \
	Gui/Widgets/Voting/PBReports/CloseNoteWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterWidget.hxx \
	Gui/Widgets/Voting/PBReports/CloseNoteRegisterInfoWidget.hxx \
	Gui/Widgets/Voting/PBReports/statistic-counter-register-widget.h \
	Gui/Widgets/confirmation-delete-widget.h \
	Gui/Widgets/voting-frame-base.h \
	Functionalities/ShutdownMachineFunctionality.h \
	Gui/Widgets/close-election-confirmation-widget.h \
	Operation/GenerateXMLImage.h \
	Gui/Widgets/BarcodeDetectionWidget.h \
	Functionalities/FillAssistedActivationInfoFunctionality.h \
	Gui/Widgets/AssistedActivationWidget.h \
	Functionalities/ActivationConsolidationFunctionality.h \
	Gui/Windows/PMWindow.hxx \
	Gui/Windows/VMWindow.hxx \
	Gui/Windows/RunMachineWindow.hxx \
	Gui/Widgets/RunMachineWidget.hxx \
	Gui/Widgets/PMInstallMachineWidget.hxx \
	Gui/Widgets/VMInstallMachineWidget.hxx \
	Gui/Widgets/InstallMachineWidget.hxx \
	Gui/Widgets/ConsolidationStatsWidget.h \
	Gui/Widgets/ActivationStatsWidget.h \
	Gui/Widgets/CardActivatorEventBox.h \
	Gui/Widgets/Voting/VotePreviewWidget.hxx \
	Gui/Widgets/ContingencyWidget.hxx \
	Gui/Widgets/LoginWidget.hxx \
	Gui/Widgets/InfoMessageWidget.hxx \
	Gui/Widgets/AbstractFactoryWidget.hxx \
	Gui/Widgets/FactoryMethodWidget.hxx \
	Gui/Widgets/Voting/FactoryVotingWidget.hxx \
	Gui/Widgets/PollingPlaceInfoWidget.hxx \
	Gui/Widgets/PMPollingPlaceInfoWidget.hxx \
	Gui/Widgets/VMPollingPlaceInfoWidget.hxx \
	Gui/Widgets/PMAuthenticationPollingPlaceInfoWidget.hxx \
	Gui/Widgets/VMAuthenticationPollingPlaceInfoWidget.hxx \
	Gui/Widgets/VMInstallationConfirmation.hxx \
	Gui/Widgets/ProgressWidget.hxx \
	Gui/Widgets/PMProgressWidget.hxx \
	Gui/Widgets/VMProgressWidget.hxx \
	Gui/Widgets/ReportInstallWidget.hxx \
	Gui/Widgets/LanguageInstallWidget.hxx \
	Gui/Widgets/AutomaticDiagnosticWidget.hxx \
	Gui/Widgets/DiagnosticResultWidget.hxx \
	Gui/Widgets/DeviceResultWidget.hxx \
	Gui/Widgets/InitiatorWidget.hxx \
	Gui/Widgets/ContingencyCardGenWidget.h \
	Gui/Widgets/Voting/CardRemovedWidget.hxx \
	Gui/Widgets/Voting/RemoveCardWidget.hxx \
	Gui/Widgets/Voting/PrintVoteWidget.hxx \
	Gui/Widgets/Voting/EndPrintVoteWidget.hxx \
	Gui/Widgets/Voting/PrintVoteErrorWidget.hxx \
	Gui/Widgets/Voting/PrintTimeOutWidget.hxx \
	Gui/Widgets/Voting/EndVotingWidget.hxx \
	Gui/Widgets/AuthenticationWidget.hxx \
	Gui/Widgets/PMAuthenticationWidget.hxx \
	Gui/Widgets/VMAuthenticationWidget.hxx \
	Gui/Widgets/MachineVotingWidget.hxx \
	Gui/Widgets/MachineWizardWidget.hxx \
	Gui/Widgets/BallotOptionButtonWidget.hxx \
	Gui/Widgets/PartyButtonWidget.hxx \
	Gui/Widgets/BallotOptionTableWidget.hxx \
	Gui/Widgets/FillTableWidget.hxx \
	Gui/Widgets/FillTableColumnFixedWidget.hxx \
	Gui/Widgets/FillTableColumnDynamicWidget.hxx \
	Gui/Widgets/HelpWidget.hxx \
	Gui/Widgets/InfoStepWidget.hxx \
	Gui/Widgets/MenuWidget.hxx \
	Gui/Widgets/MemoryStateWidget.hxx \
	Operation/FormatLabel.hxx \
	Operation/AlarmMessage.hxx \
	Operation/Voting/VotingOperation.hxx \
	Gui/Widgets/Voting/SimulationWidget.hxx \
	Gui/Widgets/Voting/PreviewWidget.hxx \
	Gui/Widgets/Voting/TimeOutPreviewWidget.hxx \
	Gui/Widgets/Voting/VotingExperienceValidationWidget.hxx \
	Gui/Widgets/Voting/VotingExperienceWidget.hxx \
	Gui/Widgets/OpenElectionStatusWidget.hxx \
	Gui/Widgets/OpenNoteWidget.hxx \
	Gui/Widgets/DiagnosisBlockedWidget.hxx \
	Gui/Widgets/ResultWidget.hxx \
	Gui/Widgets/ListResultWidget.hxx \
	Gui/Widgets/DataUtilsValidatorWidget.hxx \
	Gui/Widgets/DataUtilsResultWidget.hxx

pkgconfigdir = ${libdir}/pkgconfig
pkgconfig_DATA = libsaesguibase.pc

EXTRA_DIST = \
libsaesguibase.pc.in


configuration-list: ${XSDDIR}/SaesGUIConfiguration-schema.xsd

	$(XSDCXX) cxx-tree \
	--output-dir $(top_srcdir)/src/Configuration/GeneratedClasses/Configuration \
	$(XSDFLAGS) \
	--namespace-map http://www.w3.org/2001/XMLSchema=Smartmatic::ConfigurationTypes \
	--enumerator-regex '/(.+)/CONFIGURATION_\U$$1/' \
	--custom-type ProcessStatus=Smartmatic::SAES::Voting::Status::ProcessStatus \
	--custom-type WorkerMemberType=Smartmatic::SAES::Voting::PBReports::WorkerMemberType \
	--hxx-prologue '#include <Voting/Status/election-status-schema.hxx>' \
	--hxx-prologue '#include <Voting/PBReports/pollworkers-schema.hxx>' \
	--file-list $@ \
	 $<


